--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,6 +16,18 @@ body {
   margin-left: 5px;
 }
 
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
 .list-inline {
   list-style: none;
   display: flex;
@@ -46,7 +58,6 @@ header .navbar {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -69,7 +80,7 @@ header .navbar ul li {
 }
 
 header .navbar ul li.active {
-  border-bottom: 3px solid #0282F9;
+  border-bottom: 5px solid #0282F9;
 }
 
 header .navbar ul li.active a {
@@ -125,5 +136,60 @@ header .jumbo {
   background-image: url("/img/jumbotron.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+main {
+  background-color: #1C1C1C;
+}
+
+main .comics {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  padding: 20px 0;
+}
+
+main .comics > p {
+  display: inline-block;
+  background-color: #0282F9;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 10px 20px;
+  font-size: 26px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+main .comics .comics-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+main .comics .comics-container .comic {
+  width: calc(100% / 6 - 20px);
+}
+
+main .comics .comics-container .comic .comic-cover {
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+main .comics .comics-container .comic .comic-cover img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+main .comics .comics-container .comic p {
+  text-transform: uppercase;
+  color: #fff;
 }
 
