--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -6,6 +6,18 @@
   margin-left: 5px;
 }
 
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
 .list-inline {
   list-style: none;
   display: flex;
