--- a/resources/sass/partials/_mixins.scss
+++ b/resources/sass/partials/_mixins.scss
@@ -6,5 +6,13 @@
 
 @mixin a-style($color) {
   text-decoration: none;
+  text-transform: uppercase;
   color: $color;
+}
+
+@mixin btn-blue {
+  background-color: $primaryColor;
+  padding: 5px 50px;
+  font-size: 14px;
+  font-weight: bold;
 }
