--- a/resources/sass/partials/_mixins.scss
+++ b/resources/sass/partials/_mixins.scss
@@ -6,7 +6,6 @@
 
 @mixin a-style($color) {
   text-decoration: none;
-  text-transform: uppercase;
   color: $color;
 }
 
@@ -15,4 +14,13 @@
   padding: 5px 50px;
   font-size: 14px;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+@mixin btn-transparent {
+  border: 2px solid $primaryColor;
+  padding: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
