--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,6 +1,8 @@
 $primaryColor: #0282F9;
+$primaryLight: #00A9D9;
 $white: #fff;
 $textColor: #464C52;
 $mainBg: #1C1C1C;
 $footerColor: #959595;
 $footerBg: #303030;
+$titleColor: #003F63;
