--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,7 +36,6 @@ body {
 header .header-top {
   background-color: #0282F9;
 }
-
 header .header-top div {
   width: 80%;
   margin-left: auto;
@@ -47,13 +46,11 @@ header .header-top div {
   justify-content: flex-end;
   align-items: center;
 }
-
 header .header-top p {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
 }
-
 header .navbar {
   width: 80%;
   margin-left: auto;
@@ -62,57 +59,45 @@ header .navbar {
   justify-content: space-between;
   align-items: center;
 }
-
 header .navbar a {
   display: flex;
 }
-
 header .navbar a img {
   width: 80px;
 }
-
 header .navbar ul {
   line-height: 100px;
 }
-
 header .navbar ul li {
   margin: 0 10px;
 }
-
 header .navbar ul li.active {
   border-bottom: 5px solid #0282F9;
 }
-
 header .navbar ul li.active a {
   color: #0282F9;
 }
-
 header .navbar ul li:hover {
   border-bottom: 5px solid #0282F9;
 }
-
 header .navbar ul li:hover a {
   color: #0282F9;
 }
-
 header .navbar ul li a {
   text-decoration: none;
   color: #464C52;
   font-weight: bold;
   text-transform: uppercase;
 }
-
 header .navbar ul li a i {
   color: #0282F9;
   line-height: 100px;
 }
-
 header .navbar .search {
   display: flex;
   align-items: center;
   border-bottom: 2px solid #0282F9;
 }
-
 header .navbar .search input {
   width: 90px;
   font-weight: bold;
@@ -122,23 +107,18 @@ header .navbar .search input {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 16px;
 }
-
 header .navbar .search ::-moz-placeholder {
   color: #464C52;
 }
-
 header .navbar .search :-ms-input-placeholder {
   color: #464C52;
 }
-
 header .navbar .search ::placeholder {
   color: #464C52;
 }
-
 header .navbar .search i {
   color: #464C52;
 }
-
 header .jumbo {
   height: 290px;
   background-image: url("/img/jumbotron.jpg");
@@ -149,7 +129,6 @@ header .jumbo {
 main #comics-list {
   background-color: #1C1C1C;
 }
-
 main #comics-list .comics {
   width: 80%;
   margin-left: auto;
@@ -158,7 +137,6 @@ main #comics-list .comics {
   padding: 20px 0;
   text-align: center;
 }
-
 main #comics-list .comics > p {
   display: inline-block;
   background-color: #0282F9;
@@ -172,38 +150,32 @@ main #comics-list .comics > p {
   left: 0;
   transform: translateY(-50%);
 }
-
 main #comics-list .comics .comics-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 20px;
 }
-
 main #comics-list .comics .comics-container .comic {
   width: calc(100% / 6 - 20px);
-  cursor: pointer;
+  text-decoration: none;
 }
-
 main #comics-list .comics .comics-container .comic .comic-cover {
   width: 100%;
   padding-top: 100%;
   position: relative;
   overflow: hidden;
 }
-
 main #comics-list .comics .comics-container .comic .comic-cover img {
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
 }
-
 main #comics-list .comics .comics-container .comic p {
   text-transform: uppercase;
   color: #fff;
 }
-
 main #comics-list .comics > a.load {
   text-decoration: none;
   color: #fff;
@@ -213,26 +185,22 @@ main #comics-list .comics > a.load {
   font-weight: bold;
   text-transform: uppercase;
 }
-
 main #services {
   background-color: #0282F9;
   height: 150px;
   display: flex;
   align-items: center;
 }
-
 main #services div {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
 }
-
 main #services div ul {
   justify-content: space-around;
   align-items: center;
 }
-
 main #services div ul li a {
   text-decoration: none;
   color: #fff;
@@ -240,14 +208,57 @@ main #services div ul li a {
   align-items: center;
   text-transform: uppercase;
 }
-
 main #services div ul li a img {
   height: 55px;
   margin-right: 10px;
 }
-
 main #services div ul li:last-child img {
   height: 35px;
+}
+main #comic-info .line {
+  background-color: #0282F9;
+  height: 60px;
+}
+main #comic-info .comic-details {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 100px;
+  position: relative;
+}
+main #comic-info .comic-details .cover {
+  position: absolute;
+  top: -310px;
+  left: 100px;
+  border: 1px solid #fff;
+}
+main #comic-info .comic-details .cover a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #00A9D9;
+}
+main #comic-info .comic-details .cover a.cover-top {
+  padding: 2px 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+main #comic-info .comic-details .cover a.cover-bottom {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 2px 0;
+}
+main #comic-info .comic-details .comic-description {
+  padding: 50px 0;
+  display: flex;
+}
+main #comic-info .comic-details .comic-description .text h1 {
+  color: #003F63;
+  text-transform: uppercase;
 }
 
 footer .links-container {
@@ -256,7 +267,6 @@ footer .links-container {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 footer .links-container .links {
   width: 80%;
   margin-left: auto;
@@ -266,50 +276,40 @@ footer .links-container .links {
   background-repeat: no-repeat;
   padding: 40px 0;
 }
-
 footer .links-container .links .links-lists {
   display: flex;
 }
-
 footer .links-container .links .links-lists .list {
   margin-right: 20px;
 }
-
 footer .links-container .links .links-lists .list h3 {
   color: #fff;
   text-transform: uppercase;
   margin: 15px 0;
 }
-
 footer .links-container .links .links-lists .list ul {
   list-style: none;
 }
-
 footer .links-container .links .links-lists .list ul li:hover a {
   color: #0282F9;
 }
-
 footer .links-container .links .links-lists .list ul li a {
   text-decoration: none;
   color: #959595;
   font-size: 12px;
 }
-
 footer .links-container .links p {
   margin-top: 15px;
   color: #959595;
   font-size: 12px;
 }
-
 footer .links-container .links p a {
   text-decoration: none;
   color: #0282F9;
 }
-
 footer .copyright {
   background-color: #303030;
 }
-
 footer .copyright > div {
   width: 80%;
   margin-left: auto;
@@ -319,7 +319,6 @@ footer .copyright > div {
   align-items: center;
   justify-content: space-between;
 }
-
 footer .copyright > div > a {
   border: 2px solid #0282F9;
   padding: 15px;
@@ -329,22 +328,17 @@ footer .copyright > div > a {
   text-decoration: none;
   color: #fff;
 }
-
 footer .copyright > div > a:hover {
   background-color: #0282F9;
 }
-
 footer .copyright > div .social {
   display: flex;
   align-items: center;
 }
-
 footer .copyright > div .social h3 {
   text-transform: uppercase;
   color: #0282F9;
 }
-
 footer .copyright > div .social ul li {
   margin-left: 20px;
 }
-
