--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -22,3 +22,16 @@
   list-style: none;
   display: flex;
 }
+
+.border-y {
+  border-top: 1px solid $lightGrey;
+  border-bottom: 1px solid $lightGrey;
+}
+
+.border-b {
+  border-bottom: 1px solid $lightGrey;
+}
+
+.border-t {
+  border-top: 1px solid $lightGrey;
+}
