--- a/resources/sass/partials/_single.scss
+++ b/resources/sass/partials/_single.scss
@@ -102,6 +102,7 @@
 
     .credits-container {
       @include container-center;
+      padding: 0 100px;
 
       .credits-info {
         padding-bottom: 100px;
@@ -137,6 +138,24 @@
                 @include a-style($primaryColor);
                 text-transform: uppercase;
               }
+            }
+          }
+        }
+      }
+
+      .services {
+        ul {
+          li {
+            a {
+              @include a-style(#9F9F9F);
+              display: flex;
+              text-transform: uppercase;
+
+              img {
+                height: 55px;
+                margin-right: 10px;
+              }
+
             }
           }
         }
