--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -35,3 +35,12 @@
 .border-t {
   border-top: 1px solid $lightGrey;
 }
+
+.border-x {
+  border-right: 1px solid $lightGrey;
+  border-left: 1px solid $lightGrey;
+}
+
+.border-r {
+  border-right: 1px solid $lightGrey;
+}
